<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_desc"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="#666666"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/etForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnForgotSubmit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_send_reset"
        android:backgroundTint="#D81B60"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btnBackToLoginFromForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="#9E9E9E"
        android:padding="8dp"
        android:textSize="16sp"/>

</LinearLayout>